Zope Changes

  This file contains change information for the current Zope release.
  Change information for previous versions of Zope can be found in the
  file HISTORY.txt.


  Trunk (unreleased)

    Restructuring

      - Disabled the XML export on the UI level - the export functionality
        however is still available on the Python level.

      - No longer show the Help! links in the ZMI, if there is no help
        available. The help system depends on the product registry.

      - Updated the quick start page and simplified the standard content.
        The default index_html is now a page template.

      - Removed deprecated Draft and Version support from Products.OFSP.
        Also removed version handling from the control panel. Versions are
        no longer supported on the ZODB level.

      - Removed left-overs of the deprecated persistent product distribution
        mechanism.

      - The persistent product registry is not required for starting Zope
        anymore. `enable-product-installation` can be set to off if you don't
        rely on the functionality provided by the registry.

      - ZClasses have been deprecated for two major releases. They have been
        removed in this version of Zope.

      - Avoid deprecation warnings for the md5 and sha modules in Python 2.6
        by adding conditional imports for the hashlib module.

      - Replaced  imports from the 'Globals' module throughout the 
        tree with imports from the actual modules;  the 'Globals' module
        was always intended to be an area for shared data, rather than
        a "facade" for imports.  Added zope.deferred.deprecation entries
        to 'Globals' for all symbols / modules previously imported directly.

      - Updated 'pytz' from '2007f' to '2008i'.

      - Moved svn:externals for 'mechanize', 'ClientPath', and 'pytz' to
        versions managed outside the Zope3 trunk.

      - Protect against non-existing zope.conf path and products directories.