@@ -9,6 +9,9 @@ Zope Changes
 
     Restructuring
 
+      - Updated to newer versions of zope packages. Removed long deprecated
+        defaultSkin, layer and skin ZCML directives.
+
       - Disabled the XML export on the UI level - the export functionality
         however is still available on the Python level.
 
